[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shrike"]

# Version is derived from the git tag (hatch-vcs / setuptools-scm), never a
# hand-edited constant — so it can't drift from the release tag. The build hook
# writes the computed value to src/shrike/_version.py (gitignored), which
# shrike/__init__.py re-exports as __version__.
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/shrike/_version.py"

[project]
name = "shrike-mcp"
dynamic = ["version"]
description = "MCP server for Anki collection management"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
dependencies = [
    "anki>=25.0",
    "mcp>=1.20",
    "click>=8.0",
    "filelock>=3.0",
    "httpx>=0.27",
    "platformdirs>=4.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "usearch>=2.12",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Routes store_media's server-side URL fetch through a SOCKS proxy (httpx reads
# ALL_PROXY/HTTPS_PROXY when set). Optional — plain http/https proxies need no extra.
socks = [
    "httpx[socks]>=0.27",
]
# In-process ONNX embedding backend (--embedding-backend onnx). Optional — the
# default llama-server backend needs neither. onnxruntime runs the graph;
# tokenizers (HuggingFace, Rust-backed) does the tokenization. The base wheel covers
# CPU (and CoreML on macOS, i.e. Apple GPU/ANE).
onnx = [
    "onnxruntime>=1.17",
    "tokenizers>=0.20",
]
# Same backend, CUDA/TensorRT build for NVIDIA GPUs (--embedding-onnx-provider
# CUDAExecutionProvider). Install INSTEAD of `onnx`, not alongside: the onnxruntime
# and onnxruntime-gpu wheels conflict (they provide the same package). Windows DirectML
# is an analogous manual `pip install onnxruntime-directml`.
onnx-gpu = [
    "onnxruntime-gpu>=1.17",
    "tokenizers>=0.20",
]
# In-process CLIP backend (--embedding-backend clip) for image<->text search: onnxruntime +
# tokenizers (as for onnx) plus pillow for image decode/preprocessing (no torch/torchvision).
clip = [
    "onnxruntime>=1.17",
    "tokenizers>=0.20",
    "pillow>=10",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",  # `-n auto` parallelizes the suite (each server gets its own port/dirs)
    "pytest-testmon>=2.1",  # local-only: `pytest --testmon` runs just affected tests (see CONTRIBUTING.md)
    "mypy>=1.10",
    "ruff>=0.8",
    "types-PyYAML",
    "trustme>=1.1",  # ephemeral CA/cert for the hermetic TLS test (media SNI-pinning, #165)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that start a server and make HTTP requests",
    "embedding: tests that require llama-server and a GGUF model",
]

[tool.coverage.run]
# parallel + the coverage_subprocess.pth hook let us capture the server, which
# the integration suite runs as a `python -m shrike.server` subprocess. Without
# this, ~all of server.py/daemon.py would read as uncovered.
source = ["shrike"]
branch = true
parallel = true
concurrency = ["thread"]

[tool.coverage.report]
show_missing = true
# Ratchet: bump this up as coverage climbs; never lower it just to make CI pass.
# Measured ~90% on the unit + non-embedding integration suite after the CLI
# command tests (#106/#105) and the daemon/server lifecycle tests (#104) lifted
# those modules out of the embedding/daemon blind spots; the buffer absorbs
# platform/timing variance. (server.py's remaining gap is the async/embedding-
# gated route handlers, covered by the embedding lane rather than this gate.)
fail_under = 86

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["anki.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["usearch.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jsonschema.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["onnxruntime.*", "tokenizers.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[project.scripts]
shrike = "shrike.cli:cli"

[project.urls]
Homepage = "https://github.com/lathrys-at/shrike"
Issues = "https://github.com/lathrys-at/shrike/issues"
