[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shrike"]
# Don't ship the Bazel BUILD files in the published wheel (the Bazel wheel never
# globs them; this keeps the hatchling wheel matching — see tools/check-wheel-parity.sh).
exclude = ["**/BUILD.bazel"]

# NB: the sdist file selection is intentionally *not* configured here. hatchling
# derives it from git, which can't run in Bazel's hermetic sandbox; rather than make
# the repo's `python -m build` sdist git-independent (which changes its contents), the
# Bazel sdist (//:sdist) injects an explicit include into its own staged pyproject —
# see tools/bazel/sdist_builder.py. So `python -m build` is unchanged, and //:sdist
# ships the lean staged tree.

# Version is derived from the git tag (hatch-vcs / setuptools-scm), never a
# hand-edited constant — so it can't drift from the release tag. The build hook
# writes the computed value to src/shrike/_version.py (gitignored), which
# shrike/__init__.py re-exports as __version__.
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/shrike/_version.py"

[project]
name = "shrike-mcp"
dynamic = ["version"]
description = "MCP server for Anki collection management"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
dependencies = [
    "mcp>=1.20",
    "click>=8.0",
    "filelock>=3.0",
    "httpx>=0.27",
    "platformdirs>=4.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Routes store_media's server-side URL fetch through a SOCKS proxy (httpx reads
# ALL_PROXY/HTTPS_PROXY when set). Optional — plain http/https proxies need no extra.
socks = [
    "httpx[socks]>=0.27",
]
# In-process ONNX embedding backend (--embedding-backend onnx). Optional — the
# default llama-server backend doesn't need it. The onnxruntime wheel carries the
# shared runtime the native (Rust ort) engine dlopens; tokenization runs crate-side
# (the Rust tokenizers crate) since the #278 cutover, so no Python tokenizers dep.
# The base wheel covers CPU (and CoreML on macOS, i.e. Apple GPU/ANE).
onnx = [
    "onnxruntime>=1.17",
]
# Same backend, CUDA/TensorRT build for NVIDIA GPUs (--embedding-onnx-provider
# CUDAExecutionProvider). Install INSTEAD of `onnx`, not alongside: the onnxruntime
# and onnxruntime-gpu wheels conflict (they provide the same package). Windows DirectML
# is an analogous manual `pip install onnxruntime-directml`.
onnx-gpu = [
    "onnxruntime-gpu>=1.17",
]
# In-process CLIP backend (--embedding-backend clip) for image<->text search. Same
# carrier as `onnx`: image decode/preprocessing and tokenization run crate-side
# since the #278 cutover (no torch/torchvision, no Python pillow/tokenizers).
clip = [
    "onnxruntime>=1.17",
]
# OCR via Apple's Vision framework (--ocr-backend apple, #228/#221) needs NO
# extra since #342 P3: the engine is native (shrike-recognize-apple in the
# shipped extension; Vision ships with macOS).
dev = [
    # The pip anki package is the TEST ORACLE only since the #278 cutover
    # (subprocess fixtures + parity comparisons); the runtime is native.
    "anki>=25.0",
    # usearch-python is test-only since the #278 cutover: the suite uses it to
    # author pre-#201a (v1) index layouts; the runtime engine is shrike-index.
    "usearch>=2.12",
    # tokenizers + pillow are test-only since the #278 cutover (fixture image
    # authoring + tokenizer-convention preconditions); inference runs crate-side.
    "tokenizers>=0.20",
    "pillow>=10",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",  # `-n auto` parallelizes the suite (each server gets its own port/dirs)
    "pytest-testmon>=2.1",  # local-only: `pytest --testmon` runs just affected tests (see CONTRIBUTING.md)
    "mypy>=1.10",
    "ruff>=0.8",
    "types-PyYAML",
    "trustme>=1.1",  # ephemeral CA/cert for the hermetic TLS test (media SNI-pinning, #165)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that start a server and make HTTP requests",
    "embedding: tests that require llama-server and a GGUF model",
]

[tool.coverage.run]
# parallel + the coverage_subprocess.pth hook let us capture the server, which
# the integration suite runs as a `python -m shrike.server` subprocess. Without
# this, ~all of server.py/daemon.py would read as uncovered.
source = ["shrike"]
branch = true
parallel = true
concurrency = ["thread"]

[tool.coverage.report]
show_missing = true
# Ratchet: bump this up as coverage climbs; never lower it just to make CI pass.
# Measured ~90% on the unit + non-embedding integration suite after the CLI
# command tests (#106/#105) and the daemon/server lifecycle tests (#104) lifted
# those modules out of the embedding/daemon blind spots; the buffer absorbs
# platform/timing variance. (server.py's remaining gap is the async/embedding-
# gated route handlers, covered by the embedding lane rather than this gate.)
# A target, not a CI gate: CI *reports* coverage (rc PRs + 3x/week, coverage.yml)
# but never fails on it. Enforced only locally by `scripts/coverage.sh` (exits
# non-zero below this) as a proactive self-check; see CLAUDE.md > Coverage.
fail_under = 86

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

# The native extension is built by scripts/build-native.sh (or ships as the
# shrike-native wheel). Where it IS installed its .pyi stubs apply (and
# stubtest gates them); on a stub-less environment (CI's lint lane) mypy must
# not fail on the import.
[[tool.mypy.overrides]]
module = ["shrike_native"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jsonschema.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["onnxruntime.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[project.scripts]
shrike = "shrike.cli:cli"

[project.urls]
Homepage = "https://github.com/lathrys-at/shrike"
Issues = "https://github.com/lathrys-at/shrike/issues"
