load("@rules_python//python:defs.bzl", "py_test")

# The native Cargo workspace root (#269). crate_universe reads Cargo.toml +
# Cargo.lock from here (see MODULE.bazel).
exports_files([
    "Cargo.toml",
    "Cargo.lock",
])

# Crate-layering gate (epic #265 convention 5): `pyo3` may appear only in the
# binding crates (shrike-py, plus the _demo polyglot proof). A compute/kernel
# crate growing a pyo3 dependency is exactly the structural drift that would
# make the stretch end-state (zero necessary CPython) aspirational — fail fast.
py_test(
    name = "layering_check",
    size = "small",
    srcs = ["layering_check.py"],
    main = "layering_check.py",
    data = [
        "Cargo.toml",
        "//native/_demo:Cargo.toml",
        "//native/shrike-cabi:Cargo.toml",
        "//native/shrike-collection:Cargo.toml",
        "//native/shrike-compute:Cargo.toml",
        "//native/shrike-derived:Cargo.toml",
        "//native/shrike-embed:Cargo.toml",
        "//native/shrike-engine-api:Cargo.toml",
        "//native/shrike-ffi:Cargo.toml",
        "//native/shrike-index:Cargo.toml",
        "//native/shrike-kernel:Cargo.toml",
        "//native/shrike-py:Cargo.toml",
        "//native/shrike-schemas:Cargo.toml",
    ],
)
