# The Shrike native workspace (#269, epic #265).
#
# Every native crate lives here; Bazel's crate_universe resolves third-party
# crates from this workspace's single Cargo.lock (MODULE.bazel points at it).
# Crate layering (epic convention 5): `pyo3` may appear ONLY in the binding
# crates (`shrike-py`, and the `_demo` polyglot proof) — kernel/compute crates
# stay pure Rust so the stretch end-state (zero necessary CPython) is
# structural. Enforced by //native:layering_check.

[workspace]
resolver = "2"
# Spike crates are deliberately OUT of the workspace: they pull heavyweight
# external trees (the anki monorepo) and build only when run explicitly.
exclude = ["spikes/*"]
members = [
    "_demo",
    "shrike-collection",
    "shrike-compute",
    "shrike-derived",
    "shrike-embed",
    "shrike-ffi",
    "shrike-index",
    "shrike-kernel",
    "shrike-py",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
publish = false
license = "AGPL-3.0-or-later"

[workspace.dependencies]
# extension-module: don't link libpython (symbols resolved by the host at import).
# abi3-py312: build against the stable ABI for 3.12+, so the build needs no Python
# interpreter — the key property for a hermetic Bazel build (and one wheel works
# across 3.12+). Matches the hermetic toolchain's minor.
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py312"] }
shrike-ffi = { path = "shrike-ffi" }
