# The Shrike native workspace (#269, epic #265).
#
# Every native crate lives here; Bazel's crate_universe resolves third-party
# crates from this workspace's single Cargo.lock (MODULE.bazel points at it).
# Crate layering (epic convention 5): `pyo3` may appear ONLY in the binding
# crates (`shrike-py`, and the `_demo` polyglot proof) — kernel/compute crates
# stay pure Rust so the stretch end-state (zero necessary CPython) is
# structural. Enforced by //native:layering_check.

[workspace]
resolver = "2"
members = [
    "_demo",
    "shrike-collection",
    "shrike-derived",
    "shrike-embed",
    "shrike-embed-remote",
    "shrike-describe-remote",
    "shrike-engine-api",
    "shrike-ffi",
    "shrike-index",
    "shrike-kernel",
    "shrike-llama-server",
    "shrike-mobile",
    "shrike-py",
    "shrike-recognize-apple",
    "shrike-schemas",
    "shrike-store-api",
]

# Temporary: pyo3-log's published releases (and upstream main) cap pyo3 at
# `<0.29`, which would block the RUSTSEC-2026-0176 / -0177 security bump to pyo3
# 0.29. We point at a fork — lathrys-at/pyo3-log, the v0.13.3 tag plus a single
# commit widening only the version bound (the 0.13.3 source compiles unchanged
# against 0.29). Drop this patch once upstream ships a 0.29-compatible pyo3-log
# (tracked in the Cleanup milestone, #519).
[patch.crates-io]
pyo3-log = { git = "https://github.com/lathrys-at/pyo3-log", rev = "b6f87d84939a2900776a3bfece85c9c1fe9aa162" }

[workspace.package]
version = "0.0.0"
edition = "2021"
publish = false
license = "AGPL-3.0-or-later"

[workspace.dependencies]
# extension-module: don't link libpython (symbols resolved by the host at import).
# abi3-py312: build against the stable ABI for 3.12+, so the build needs no Python
# interpreter — the key property for a hermetic Bazel build (and one wheel works
# across 3.12+). Matches the hermetic toolchain's minor.
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py312"] }
shrike-ffi = { path = "shrike-ffi" }
shrike-store-api = { path = "shrike-store-api" }
