load("@rules_python//python:defs.bzl", "py_test")

# The native Cargo workspace root (#269). crate_universe reads Cargo.toml +
# Cargo.lock from here (see MODULE.bazel).
exports_files([
    "Cargo.toml",
    "Cargo.lock",
])

# Crate-layering gate (epic #265 convention 5): `pyo3` may appear only in the
# binding crate shrike-py. A compute/kernel crate growing a pyo3 dependency is
# exactly the structural drift that would make the stretch end-state (zero
# necessary CPython) aspirational — fail fast.
py_test(
    name = "layering_check",
    size = "small",
    srcs = ["layering_check.py"],
    main = "layering_check.py",
    data = [
        "Cargo.toml",
        "//shrike-core/shrike-collection:Cargo.toml",
        "//shrike-core/shrike-derived:Cargo.toml",
        "//shrike-core/shrike-embed:Cargo.toml",
        "//shrike-core/shrike-embed-remote:Cargo.toml",
        "//shrike-core/shrike-describe-remote:Cargo.toml",
        "//shrike-core/shrike-engine-api:Cargo.toml",
        "//shrike-core/shrike-error:Cargo.toml",
        "//shrike-core/shrike-index:Cargo.toml",
        "//shrike-core/shrike-kernel:Cargo.toml",
        "//shrike-core/shrike-llama-server:Cargo.toml",
        "//shrike-core/shrike-mobile:Cargo.toml",
        "//shrike-core/shrike-network:Cargo.toml",
        "//shrike-core/shrike-py:Cargo.toml",
        "//shrike-core/shrike-recognize-apple:Cargo.toml",
        "//shrike-core/shrike-schemas:Cargo.toml",
        "//shrike-core/shrike-store:Cargo.toml",
    ],
)
