load("@rules_python//python:defs.bzl", "py_test")

# The native Cargo workspace root (#269). crate_universe reads Cargo.toml +
# Cargo.lock from here (see MODULE.bazel).
exports_files([
    "Cargo.toml",
    "Cargo.lock",
])

# Crate-layering gate (epic #265 convention 5): `pyo3` may appear only in the
# binding crate shrike-pyo3. A compute/kernel crate growing a pyo3 dependency is
# exactly the structural drift that would make the stretch end-state (zero
# necessary CPython) aspirational — fail fast.
py_test(
    name = "layering_check",
    size = "small",
    srcs = ["layering_check.py"],
    main = "layering_check.py",
    data = [
        "Cargo.toml",
        "//shrike-core/bindings/shrike-cabi:Cargo.toml",
        "//shrike-core/runtime/shrike-cache:Cargo.toml",
        "//shrike-core/runtime/shrike-collection:Cargo.toml",
        "//shrike-core/runtime/shrike-derived:Cargo.toml",
        "//shrike-core/engines/shrike-engine:Cargo.toml",
        "//shrike-core/contracts/shrike-engine-api:Cargo.toml",
        "//shrike-core/contracts/shrike-error:Cargo.toml",
        "//shrike-core/utility/shrike-image:Cargo.toml",
        "//shrike-core/runtime/shrike-index:Cargo.toml",
        "//shrike-core/runtime/shrike-kernel:Cargo.toml",
        "//shrike-core/managed/shrike-llama-server:Cargo.toml",
        "//shrike-core/utility/shrike-media:Cargo.toml",
        "//shrike-core/utility/shrike-network:Cargo.toml",
        "//shrike-core/managed/shrike-process:Cargo.toml",
        "//shrike-core/bindings/shrike-pyo3:Cargo.toml",
        "//shrike-core/engines/shrike-platform:Cargo.toml",
        "//shrike-core/contracts/shrike-schemas:Cargo.toml",
        "//shrike-core/contracts/shrike-store:Cargo.toml",
    ],
)
