load("@rules_python//python:packaging.bzl", "py_wheel")
load("//tools/bazel:sdist.bzl", "py_sdist")

# The shrike-py/ unit owns its build artifacts (#731). The Python harness is now a
# self-contained, subtree-extractable unit mirroring shrike-core/ (epic #729): its
# wheel + sdist targets live here (//shrike-py:wheel / //shrike-py:sdist), not at
# the repo root. The clean dependency edge to the Rust side is the published
# extension only — //shrike-core/shrike-pyo3:wheel_files / its platform settings —
# no reach into the workspace internals.

# The release wheel (#245; platform-tagged since #497). Version is stamped from the
# git tag (STABLE_VERSION via tools/workspace_status.sh) — the exact tag version on a
# clean release/rc tag, replacing hatch-vcs as the artifact builder.
# strip_path_prefixes drops `shrike-py/src/` and the extension package dir so the
# wheel ships `shrike/...` AND `shrike_native/...` (the compiled _native.so + stubs +
# py.typed): one artifact, no separate shrike-native dist, no version-skew surface.
# cp312-abi3 — one wheel per platform covers CPython 3.12+. The linux tags are the
# plain linux_* ones at build time; release.yml runs auditwheel repair to the
# manylinux tags PyPI requires before publishing. Metadata mirrors pyproject.toml
# (the source of truth on the coexisting dev pip path); tools/check-wheel-parity.sh
# keeps the two in lockstep.
py_wheel(
    name = "wheel",
    distribution = "shrike-mcp",
    version = "{STABLE_VERSION}",
    stamp = 1,
    python_tag = "cp312",
    abi = "abi3",
    platform = select({
        "//shrike-core/shrike-pyo3:macos_arm64": "macosx_11_0_arm64",
        "//shrike-core/shrike-pyo3:macos_x86_64": "macosx_11_0_x86_64",
        "//shrike-core/shrike-pyo3:linux_x86_64": "linux_x86_64",
        "//shrike-core/shrike-pyo3:linux_arm64": "linux_aarch64",
    }),
    summary = "MCP server for Anki collection management",
    description_file = "//:README.md",
    description_content_type = "text/markdown",
    # Mirror pyproject's [project.urls] (Project-URL, like hatchling) rather than the
    # deprecated Home-page field.
    project_urls = {
        "Homepage": "https://github.com/lathrys-at/shrike",
        "Issues": "https://github.com/lathrys-at/shrike/issues",
    },
    license = "AGPL-3.0-or-later",
    python_requires = ">=3.12",
    requires = [
        "mcp>=1.20",
        "click>=8.0",
        "filelock>=3.0",
        "httpx>=0.27",
        "platformdirs>=4.0",
        "pyyaml>=6.0",
        "rich>=13.0",
        "numpy>=1.26",
        # The dylib carrier for the native ort engine — hard dep since #497 (the
        # onnx/clip extras are gone; the `gpu` extra swaps the carrier).
        "onnxruntime>=1.17",
    ],
    # Mirrors pyproject's [project.optional-dependencies] exactly (incl. `dev`, which
    # hatchling emits as Provides-Extra) so the two wheels' metadata matches for the
    # parity gate. pyproject declares no [project] classifiers, so neither wheel
    # carries any (the SPDX `license` field is the source of truth — PEP 639).
    extra_requires = {
        "socks": ["httpx[socks]>=0.27"],
        "gpu": [
            "onnxruntime-gpu>=1.17",
        ],
        "dev": [
            "anki>=25.0",
            "usearch>=2.12",
            "tokenizers>=0.20",
            "pillow>=10",
            "pytest>=8.0",
            "pytest-asyncio>=0.24",
            "pytest-cov>=5.0",
            "pytest-xdist>=3.6",
            "pytest-testmon>=2.1",
            "mypy>=1.10",
            "ruff>=0.8",
            "types-pyyaml",
            "trustme>=1.1",
        ],
    },
    entry_points = {
        "console_scripts": ["shrike = shrike.cli:cli"],
    },
    # `manual` so the per-PR `bazel test //...` lane doesn't build this release
    # artifact (and run `git describe` for it) on a shallow, tagless checkout —
    # release.yml and tools/build-wheel.sh name //shrike-py:wheel explicitly.
    tags = ["manual"],
    strip_path_prefixes = [
        "shrike-py/src",
        "shrike-core/shrike-pyo3/python",
    ],
    deps = [
        # The package tree as a filegroup — py_wheel packages direct files only, so
        # the (srcs-less, #259) //shrike-py/src/shrike:shrike umbrella wouldn't contribute.
        "//shrike-py/src/shrike:wheel_srcs",
        "//shrike-py/src/shrike:py_typed",
        # The shrike_native package payload: __init__.py + .pyi stubs + py.typed +
        # the compiled _native.so (py_wheel packages a filegroup's files directly).
        "//shrike-core/shrike-pyo3:wheel_files",
    ],
)

# The release sdist (#245). hatchling builds it via the `build` API from the staged
# source tree (the dist_files filegroups + the root-package files), git-independent
# thanks to the explicit [tool.hatch.build.targets.sdist] include, with the version
# stamped from the git tag. `manual` (like //shrike-py:wheel) keeps it off the per-PR
# //... lane; tools/build-sdist.sh + release.yml name //shrike-py:sdist explicitly.
# README/LICENSE/CHANGELOG stay at the repo root (one project-wide set) and are
# exported there (//:README.md etc.) for staging.
py_sdist(
    name = "sdist",
    srcs = [
        "//shrike-py/src/shrike:dist_files",
        "//shrike-py/tests/unit:dist_files",
        "//shrike-py/tests/integration:dist_files",
        "tests/__init__.py",
        "tests/conftest.py",
        "pyproject.toml",
        "//:README.md",
        "//:LICENSE",
        "//:CHANGELOG.md",
    ],
    tags = ["manual"],
)
