load("@rules_pkg//pkg:mappings.bzl", "pkg_files", "strip_prefix")
load("@rules_pkg//pkg:zip.bzl", "pkg_zip")

# The create-cards skill bundle: a `.skill` zip whose root holds the skill
# folder (create-cards/SKILL.md, create-cards/references/…) — the layout Claude
# Desktop / claude.ai expect on upload. The Bazel equivalent of package-skill.py
# (which stays for ad-hoc/local packaging; it lives here in the unit, symlinked
# back into scripts/); both ship the same tree. strip_prefix .from_pkg() keeps the
# package-relative path (create-cards/…) as the zip root, and the excludes drop the
# root-level evals/ test scaffolding + build cruft.
pkg_files(
    name = "skill_files",
    srcs = glob(
        ["create-cards/**"],
        exclude = [
            # Keep any skill-local evals/ (quality-eval scaffolding, not shipped
            # content) out of the bundle. None exists today; this mirrors
            # package-skill.py's ROOT_EXCLUDE_DIRS so both packagers ship the same
            # tree if one is added later (the two are meant to stay in lockstep).
            "create-cards/evals/**",
            "**/__pycache__/**",
            "**/*.pyc",
            "**/*.pyo",
            "**/.DS_Store",
        ],
    ),
    strip_prefix = strip_prefix.from_pkg(),
)

pkg_zip(
    name = "skill",
    srcs = [":skill_files"],
    package_file_name = "create-cards.skill",
    visibility = ["//visibility:public"],
)
