[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shrike"
version = "0.1.0"
description = "MCP server for Anki collection management"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
dependencies = [
    "anki>=25.0",
    "mcp>=1.20",
    "click>=8.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that start a server and make HTTP requests",
]

[project.scripts]
shrike = "shrike.cli:cli"
